--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,22 @@
     <description>SFG-Pet-Clinic</description>
     <properties>
         <java.version>11</java.version>
+<!--        <spring.cloud-version>Hoxton.SR8</spring.cloud-version>-->
+
     </properties>
+
+
+<!--    <dependencyManagement>-->
+<!--        <dependencies>-->
+<!--            <dependency>-->
+<!--                <groupId>org.springframework.cloud</groupId>-->
+<!--                <artifactId>spring-cloud-dependencies</artifactId>-->
+<!--                <version>${spring.cloud-version}</version>-->
+<!--                <type>pom</type>-->
+<!--                <scope>import</scope>-->
+<!--            </dependency>-->
+<!--        </dependencies>-->
+<!--    </dependencyManagement>-->
 
     <build>
         <plugins>
