--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,3 +24,6 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+      with:
+        source: "./target/SFG-Pet-Clinic-0.0.1-SNAPSHOT.jar"
+        target: "/usr/test/"
