refractored all SDJpaServices

--- a/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic-web/src/main/resources/application.properties
@@ -1,4 +1,11 @@
+# The property below tell spring that the application properties file will
+# start be messages.properties in messages directory, N:B if in this project there are several
+# internationalization for example ES, EN etc. so if any of it(say messages_es.properties or messages_en.properties) is empty it falls back to the parent
+# that is messages.properties
 spring.messages.basename= messages/messages
+### ------------------###
+# If profile is map, that means we are storing in Map
 spring.profiles.active=map
+#--------------------###
 spring.batch.job.enabled=false
 server.port=7071
