need to fix the Not_Found bug on the owners/id url

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,12 @@
 <!--            </dependency>-->
 <!--        </dependencies>-->
 <!--    </dependencyManagement>-->
+    <dependencies>
+<!--        <dependency>-->
+<!--            <groupId>org.thymeleaf.extras</groupId>-->
+<!--            <artifactId>thymeleaf-extras-java8time</artifactId>-->
+<!--        </dependency>-->
+    </dependencies>
 
     <build>
         <plugins>
