--- a/pet-clinic-data/pom.xml
+++ b/pet-clinic-data/pom.xml
@@ -47,5 +47,8 @@
         <maven.compiler.target>11</maven.compiler.target>
         <spring-boot.repackage.skip>true</spring-boot.repackage.skip>
     </properties>
+    <build>
+        <finalName>pet-clinic-data</finalName>
+    </build>
 
 </project>
