--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -66,11 +66,15 @@
     </dependencies>
 
     <properties>
-        <webjars-bootstrap.version>5.1.3</webjars-bootstrap.version>
+        <webjars-bootstrap.version>3.3.6</webjars-bootstrap.version>
+<!--        <webjars-bootstrap.version>5.0.1</webjars-bootstrap.version>-->
         <webjars-font-awesome.version>4.7.0</webjars-font-awesome.version>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
+    <build>
+        <finalName>pet-clinic-web</finalName>
+    </build>
 
 
 </project>
